# dev

./: CHECKLIST.md  HISTORY.md  README.md
2020/core/ds/src/x/: Makefile.am  Makefile.in  check.c  list.c  list.h  log.c  log.h  sync.h  types.c  types.h
2020/ice/: .gitignore  Makefile.am  Makefile.in  README.md  TODO.md  configure  configure.ac
2020/ice/docs/: README.md
2020/ice/docs/autoconf/: AC_CONFIG_FILES.md  AC_CONFIG_HEADERS.md  AC_INIT.md  AC_OUTPUT.md  AC_PROG_CC.md
2020/ice/docs/automake/: AC_PROG_RANLIB.md  AM_CFLAGS.md  AM_INIT_AUTOMAKE.md
2020/ice/include/: Makefile.am
2020/ice/src/: Makefile.am  Makefile.in
2020/ice/src/novemberizing/: Makefile.am  Makefile.in
2020/ice/src/novemberizing/ds/: Makefile.am  Makefile.in  check.c  xarray.c  xarray.h  xlist.c  xlist.h  xmap.c  xmap.h  xtypes.c  xtypes.h
2020/ice/src/novemberizing/ice/: Makefile.am  Makefile.in  main.c
2020/ice/src/novemberizing/net/: Makefile.am  Makefile.in  check.c  xengine.h
2020/old/ds/src/: Makefile.am  Makefile.in
2020/old/ds/src/x/: Makefile.am  Makefile.in  func.c  func.h  list.c  map.c  obj.h  sync.c  thread.h  type.h  val.c  val.h
2020/old/xgraphics/backup/example/: CMakeLists.txt
discomplexity/graphics/: CMakeLists.txt
discomplexity/homeworld2/: CMakeLists.txt
discomplexity/homeworld2/src/Homeworld2/: Box.hh  Engineshape.cc  Joint.cc  Joint.hh  Keyframe.hh  Material.cc  Material.hh  Multimesh.cc  Object.cc  ObjectFile.cc  Singlemesh.cc  Sphere.hh  Texture.cc  main.cc
discomplexity/x/: CMakeLists.txt
discomplexity/x/js/: index.js
discomplexity/x/js/homeworld2/: obj.js
discomplexity/x/js/x/core/: executor.js
discomplexity/x/js/x/graphics/: light.js  obj.js  objects.js  primitive.js  program.js  projection.js  surface.js  vector.js  vertex.js
discomplexity/x/src/x/: bytes.hh  console.hh  container.hh  core.hh  descriptor.hh  endian.hh  event.hh  matrix.cc  memory.hh  node.hh  parameter.hh  response.hh  string.hh  type.hh  variable.hh
discomplexity/x/src/x/core/: io.cc  string.hh
discomplexity/x/src/x/graphics/: application.cc  application.hh  camera.cc  color.hh  coordinate.cc  coordinate.hh  light.cc  matrix.cc  object.hh  primitive.hh  program.cc  projection.cc  projection.hh  surface.cc  surface.hh  util.cc  util.hh  vector.hh  vertices.hh
discomplexity/x/src/x/math/: rounding.hh
ds/src/x/: Makefile.am  Makefile.in  check.c  engine.c  engine.h  event.c  generator.h  list.c  list.h  log.h  map.c  map.h  obj.c  sync.c  sync.h  thread.c  thread.h  type.h  val.c  val.h
ds/src/x/event/io/: generator.h
kit/std/: .gitignore  Makefile.am  Makefile.in  NOVEMBERIZING.uml  README  README.md  configure  configure.ac  doxygen.conf
kit/std/src/: Makefile.am  Makefile.in
kit/std/src/example/: Makefile.am  Makefile.in  main.c
kit/std/src/example/console/: io.c
kit/std/src/example/event/: .gitignore  Makefile.am  Makefile.in  console.c  server.c
kit/std/src/example/x/: .gitignore  Makefile.am  Makefile.in  event.c  net.c  thread.c
kit/std/src/x/: Makefile.am  Makefile.in  buffer.c  client.c  client.h  console.c  console.h  descriptor.c  descriptor.h  descriptorio-epoll.c  descriptorio-epoll.h  descriptorio.c  descriptorio.h  event.c  event.h  exception.c  exception.h  io.c  io.h  log.c  net.c  net.h  object.c  server.c  server.h  session.c  session.h  signal.c  signal.h  socket.c  socket.h  std.c  std.h  stream.c  stream.h  subscription.h  subscriptions.h  sync.c  sync.h  thread.c  (+3 more)
kit/std/src/x/client/: socket.c  socket.h
kit/std/src/x/console/: descriptor.c  descriptor.h
kit/std/src/x/descriptor/: event.c  event.h  exception.c  exception.h  handle.h  subscription.h  subscriptions.h
kit/std/src/x/event/: Makefile.am  Makefile.in  engine.c  engine.h  generator.c  generator.h  list.h  object.c  object.h  processor.c  processor.h  queue.c  queue.h  subscription.c  subscription.h  target.c  target.h
kit/std/src/x/net/: Makefile.am  Makefile.in  client.c  descriptor.c  descriptorio.c  poll.c  server.c  session.c  socket.c
kit/std/src/x/server/: socket.c  socket.h
kit/std/src/x/session/: socket.c  socket.h
kit/std/src/x/socket/: event.h  status.h  subscription.h
kit/std/src/x/stream/: buffer.c  buffer.h
kit/std/src/x/thread/: posix.c  posix.h
xgraphics/: CMakeLists.txt  README.md  webpack.config.js
xgraphics/backup/Graphics.old/: Box.cc  Description.hh  Engineburn.cc  Glow.hh  Navlight.cc  Subdivision.cc  Texture.cc
xgraphics/backup/document/concept/: README.md  SPEC.md
xgraphics/backup/document/gundam/unit/: zaku.md
xgraphics/backup/document/history/: 20200313.md  20200316.md  20200317.md  20200318.md  20200319.md  20200321.md  20200323.md  20200325.md  20200327.md  20200328.md  20200330.md
xgraphics/backup/document/homeworld2/: README.md
xgraphics/backup/example/res/: helloworld.txt
xgraphics/backup/example/src/core/: x.array.cc  x.array.constructor.n.items.cc  x.array.constructor.source.cc  x.array.copy.constructor.cc  x.array.method.sub.cc  x.array.move.constructor.cc  x.array.operator.assign.initializer.cc  x.event.cc  x.file.load.cc  x.json.cc  (+4 more)
xgraphics/backup/homeworld2/core/: CMakeLists.txt
xgraphics/backup/res/image/: check.pattern.xcf
xgraphics/backup/sample/core/: triangle.cc
xgraphics/backup/space/core/: CMakeLists.txt  main.cc
xgraphics/doc/: concept.pptx
xgraphics/docs/js/homeworld2/: object.unpack.js
xgraphics/docs/shader/: loading.simple.box.fragment.shader  loading.simple.box.vertex.shader  simple.vertex.shader  standard.fragment.shader  standard.vertex.shader
xgraphics/homeworld2/core/: CMakeLists.txt  main.cc
xgraphics/homeworld2/core/Homeworld2/: Resource.cc  Senario.cc
xgraphics/src/core/: CMakeLists.txt
xgraphics/src/core/x/: bytes.hh  console.hh  container.hh  json.hh  map.hh  math.hh  matrix.hh  mouse.hh  random.hh  real32.hh  set.hh  string.hh  uinteger32.hh  variable.hh  vector.hh
xgraphics/src/js/homeworld2/: joint.js  reference.js  singlemesh.js
xgraphics/xSpace/core/: CMakeLists.txt
xgraphics/xSpace/core/xSpace/: Layer.cc  Layer.hh  Object.cc  Scene.cc  Scene.hh
(+1088 files in other folders)
