dnl ----------------------------------------------------------
dnl INITIALIZE CONFIGURE
dnl ----------------------------------------------------------
AC_INIT([novemberizing], [0.0.1], [novemberizing@gmail.com])

dnl ----------------------------------------------------------
dnl CREATE CONFIGURATION FILES
dnl ----------------------------------------------------------
AC_CONFIG_FILES([
    Makefile
    src/Makefile
    src/x/Makefile
])

dnl ----------------------------------------------------------
dnl CONFIGURATION HEADER FILES
dnl ----------------------------------------------------------
AC_CONFIG_HEADERS([config.h])

dnl ----------------------------------------------------------
dnl AUTOMAKE
dnl ----------------------------------------------------------
AM_INIT_AUTOMAKE
AC_PROG_RANLIB
AC_PROG_CC

dnl ----------------------------------------------------------
dnl OUTPUTING FILES
dnl ----------------------------------------------------------
AC_OUTPUT
