# MAIN MAKEFILE FOR ...

SUBDIRS=x

nobase_include_HEADERS =        \
x/log.h                         \
x/type.h                        \
x/sync.h                        \
x/thread.h                      \
x/val.h                         \
x/func.h                        \
x/list.h                        \
x/map.h
