AM_CFLAGS = -I$(top_srcdir)/src
ACLOCAL_AMFLAGS = -I m4

lib_LIBRARIES = libnovemberizing.a

libnovemberizing_a_SOURCES = std.c                  \
                             log.c                  \
                             thread.c               \
                             descriptor.c           \
                             descriptorio.c         \
                             descriptorio-epoll.c

# libnovemberizing_a_LIBADD  = net/libnovemberizing-net.a event/libnovemberizing-event.a
